using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class AnimParams
{
    public static string OnDead = "OnDead";
    public static string OnAttack = "OnAttack";
    public static string OnDamage = "OnDamage";
    public static string IsMoving = "IsMoving";
}
